--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="VsCodePath\" />
+  </ItemGroup>
+
 </Project>
