--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,6 +7,10 @@
     <OutputType>WinExe</OutputType>
   </PropertyGroup>
 
+<ItemGroup>
+<AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
