--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     // Set the default
     "editor.formatOnSave": false,
+    "editor.codeActionsOnSave": [ "source.organizeImports"],
     // Enable per-language
     "[csharp]": {
         "editor.defaultFormatter": "csharpier.csharpier-vscode",
         "editor.formatOnSave": true
     }
+    
 }
